css/styles.css
body {
  font-family: "Roboto", sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  letter-spacing: 0.02em;
  color: #434455;
  background-color: #ffffff;
  margin: 0;
}

ul,
ol {
  list-style-type: none;
  margin: 0;
  padding-left: 0;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
  margin: 0;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

.container {
  width: 100%;
  max-width: 320px;
  padding: 0 16px;
  margin: 0 auto;
}

@media (min-width: 768px) {
  .container {
    max-width: 768px;
  }
}

@media (min-width: 1158px) {
  .container {
    max-width: 1158px;
  }
}

.page-header {
  background-color: #ffffff;
  border-bottom: 1px solid #e7e9fc;
  box-shadow:
    0px 2px 1px rgba(46, 47, 66, 0.08),
    0px 1px 1px rgba(46, 47, 66, 0.16),
    0px 1px 6px rgba(46, 47, 66, 0.08);
}

.header-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.logo {
  font-family: "Raleway", sans-serif;
  color: #2e2f42;
  font-size: 18px;
  font-weight: 700;
  line-height: 1.17;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  text-decoration: none;
  margin-right: 76px;
}

.logo-accent {
  color: #4d5ae5;
}

.nav-link {
  position: relative;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 500;
  letter-spacing: 0.02em;
  color: #2e2f42;
  text-decoration: none;
  display: block;
  padding: 24px 0;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.nav-link:hover,
.nav-link:focus {
  color: #404bbf;
}

.nav-link.current {
  color: #404bbf;
}

.nav-link.current::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 4px;
  background-color: #404bbf;
  border-radius: 2px;
}

.header-address {
  margin-left: auto;
}

.contact-link {
  display: block;
  color: #434455;
  text-decoration: none;
  font-style: normal;
  padding: 24px 0;
  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.contact-link:hover,
.contact-link:focus {
  color: #404bbf;
}

.page-nav,
.header-address {
  display: none;
}

.burger-btn {
  background-color: transparent;
  border: none;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}

.burger-btn svg {
  fill: #2e2f42;
}

.mobile-menu {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 9999;
  height: 100vh;
  background-color: #fff;
  padding: 72px 24px 40px 16px;
  display: flex;
  flex-direction: column;
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
  transform: translateX(100%);
  transition: 
    transform 300ms ease,
    opacity 300ms ease,
    visibility 300ms ease;
}

@media (min-width: 768px) {
  .mobile-menu {
    display: none;
  }
}

.mobile-close-btn {
  position: absolute;
  top: 24px;
  right: 24px;
  width: 24px;
  height: 24px;
  z-index: 10000;
  border-radius: 50%;
  border: 1px solid rgba(0, 0, 0, 0.1);
  background-color: #e7e9fc;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0;
  color: #2e2f42;
  cursor: pointer;
  transition:
    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.mobile-menu .social-list {
  justify-content: flex-start;
  margin-top: 48px;
}

.mobile-menu-container {
  max-width: 320px;
  margin: 0 auto;
  height: 100%;
  display: flex;
  flex-direction: column;
}

.mobile-menu.is-open {
  opacity: 1;
  visibility: visible;
  pointer-events: auto;
  transform: translateX(0);
}

.mobile-close-icon {
  stroke: currentColor;
  width: 12px;
  height: 12px;
}

.mobile-close-btn:hover,
.mobile-close-btn:focus {
  background-color: #404bbf;
  border: none;
  color: #ffffff;
}

.mobile-nav ul {
  list-style: none;
  padding: 0;
  margin-top: 0;
  display: flex;
  flex-direction: column;
  gap: 40px;
}

.mobile-nav a {
  font-size: 36px;
  font-weight: 700;
  line-height: 1.5;
  color: #2e2f42;
  text-decoration: none;
  text-align: left;
}

.mobile-nav a.current {
  color: #404bbf;
}

.mobile-nav a:hover,
.mobile-nav a:focus {
  color: #404bbf;
}

.mobile-contact {
  margin-top: auto;
  display: flex;
  flex-direction: column;
  gap: 24px;
  padding: 24px 0;
}

.mobile-contact a {
  text-decoration: none;
  color: #434455;
}

.mobile-contact a:first-child {
  color: #4d5ae5;
}

@media (min-width: 768px) {
  .burger-btn {
    display: none;
  }

  .page-nav {
    display: block;
  }

  .header-address {
    display: block;
  }

  .nav-list {
    display: flex;
    gap: 40px;
  }

  .contacts {
    display: flex;
    flex-direction: column;
    gap: 12px;
  }

  .contact-link {
    padding: 0;
    font-size: 12px;
    line-height: 1.17;
  }

  .header-container {
    padding: 16px 0;
  }
}

@media (min-width: 1158px) {
  .contacts {
    flex-direction: row;
    gap: 40px;
  }

  .contact-link {
    font-size: 16px;
    line-height: 1.5;
  }

  .header-container {
    padding: 24px 0;
  }
}

.page-nav ul {
  display: flex;
  gap: 40px;
}

.hero-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.hero {
  background-color: #2e2f42;
  padding: 72px 0;
  max-width: 320px;
  margin: 0 auto;
  background-image:
    linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
    url(../images/people-office-mobile.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

@media (min-resolution: 2dppx) {
  .hero {
    background-image:
      linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
      url("../images/people-office-mobile@2x.jpg");
  }
}

.hero-title {
  font-family: "Roboto", sans-serif;
  font-size: 36px;
  font-weight: 700;
  line-height: 1.07;
  letter-spacing: 0.02em;
  color: #ffffff;
  text-align: center;
  max-width: 216px;
  margin-bottom: 48px;
}
/* ... */

